# wgsl_to_wgpu

./: CHANGELOG.md  Cargo.toml  LICENSE  Mangling.md  README.md
.github/workflows/: rust.yml
example/: Cargo.toml  build.rs  release.toml
example/src/: compute.rs  compute_shader.rs  compute_shader.wgsl  main.rs  shader.rs  shader.wgsl
src/: lib.rs  main.rs  shader.wgsl  wgsl.rs
wgsl_to_wgpu/: Cargo.toml  release.toml
wgsl_to_wgpu/src/: bindgroup.rs  compute.rs  consts.rs  entry.rs  error.rs  lib.rs  renderpass.rs  structs.rs  test.rs  wgsl.rs
wgsl_to_wgpu/src/data/: entries_all_stages.wgsl  fragment_simple.rs  fragment_simple.wgsl  fragment_simple_rustfmt.rs  mesh_shader.wgsl  modules.wgsl  shader_stage_collection.wgsl
wgsl_to_wgpu/src/data/bindgroup/: compute.rs  compute.wgsl  fragment.rs  fragment.wgsl  named_different_modules.wgsl  named_multiple_bindings.wgsl  named_simple.wgsl  named_types_modules.wgsl  vertex.rs  vertex.wgsl  vertex_fragment.rs  vertex_fragment.wgsl
wgsl_to_wgpu/src/data/struct/: bytemuck_input_layout_validation.rs  bytemuck_input_layout_validation.wgsl  encase_bytemuck.rs  encase_bytemuck.wgsl  serde_encase_bytemuck.rs  serde_encase_bytemuck.wgsl  types.glam.rs  types.nalgebra.rs  types.rust.rs  types.wgsl  types_bytemuck.wgsl  types_encase.wgsl
wgsl_to_wgpu/src/snapshots/: add_duplicate_module_different_paths.snap  add_duplicate_module_different_paths.snap.rs  add_single_root_module.snap  add_single_root_module.snap.rs  bind_group_named_different_modules.snap.rs  bind_group_named_multiple_bindings.snap.rs  bind_group_named_name_modules.snap.rs  bind_group_named_simple.snap.rs  bind_group_named_types_modules.snap.rs  bind_group_shared_multiple_bindings.snap.rs  bind_group_shared_name_modules.snap.rs  bind_group_shared_simple.snap.rs  bind_group_shared_types_modules.snap.rs  bind_groups_module_compute.snap  bind_groups_module_fragment.snap  bind_groups_module_vertex.snap  bind_groups_module_vertex_fragment.snap  bytemuck_input_layout_validation.wgsl  create_shader_module_compute_overrides.snap  create_shader_module_compute_overrides.snap.rs  create_shader_module_immediate_data.snap  create_shader_module_immediate_data.snap.rs  create_shader_module_include_source.snap  create_shader_module_multiple_outputs.snap  create_shader_module_multiple_outputs.snap.rs  create_shader_module_overrides.snap  create_shader_module_overrides.snap.rs  create_shader_module_push_constants.snap  create_shader_modules_source.snap  create_shader_modules_source.snap.rs  create_shader_modules_source_rustfmt.snap  create_shader_modules_source_rustfmt.snap.rs  create_shader_multiple_entries.snap  create_shader_multiple_entries.snap.rs  mesh_shader.snap  mesh_shader.snap.rs  shader.wgsl  shader_stage_collection.snap  shader_stage_collection.snap.rs  single_root_module.snap  (+29 more)
wgsl_to_wgpu/test_compile/: Cargo.toml  build.rs
wgsl_to_wgpu/test_compile/src/: lib.rs
wgsl_to_wgpu/tests/: create_shader_module.rs  create_shader_modules.rs
wgsl_to_wgpu/tests/output/: modules.rs  modules_single.rs  shader_stage_collection.rs  vertex_entries.rs
wgsl_to_wgpu/tests/wgsl/: shader_stage_collection.wgsl  vertex_entries.wgsl
