[package]
name = "wgsl_to_wgpu"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
description = "Generate typesafe Rust bindings from wgsl shaders to wgpu using macros"
license = "MIT"
documentation = "https://docs.rs/wgsl_to_wgpu"
repository = "https://github.com/ScanMountGoat/wgsl_to_wgpu"
edition = "2018"

# required for WGPU
resolver = "2"

[lib]
proc-macro = true

[dependencies]
naga = { version = "0.8.0", features = ["wgsl-in"] }
syn = "1"
quote = "1"
proc-macro2 = "1"
wgpu = "0.12.0"
static_assertions = "1.1.0"

[dev-dependencies]
indoc = "1.0"