[package]
name = "wgsl_to_wgpu"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
description = "Generate typesafe Rust bindings for wgsl shaders in wgpu"
license = "MIT"
documentation = "https://docs.rs/wgsl_to_wgpu"
repository = "https://github.com/ScanMountGoat/wgsl_to_wgpu"
edition = "2018"

# required for WGPU
resolver = "2"

[dependencies]
naga = { version = "0.8.5", features = ["wgsl-in"] }
wgpu = "0.12.0"

[dev-dependencies]
indoc = "1.0"
