[package]
name = "example"
version = "0.15.2"
edition.workspace = true

publish = false

[dependencies]
winit = "0.30"
wgpu = "27.0"
futures = "0.3"
bytemuck = { version = "1.23", features = ["derive"] }
encase = "0.12"
glam = { version = "0.30.7", features = ["bytemuck", "encase"] }

[build-dependencies]
wgsl_to_wgpu = { path = "../wgsl_to_wgpu" }
