[package]
name = "wgsl_to_wgpu"
version = "0.8.1"
authors = ["ScanMountGoat <>"]
description = "Generate typesafe Rust bindings from WGSL shaders to wgpu"
license = "MIT"
documentation = "https://docs.rs/wgsl_to_wgpu"
repository = "https://github.com/ScanMountGoat/wgsl_to_wgpu"
readme = "../README.md"
edition = "2021"

[dependencies]
naga = { version = "0.20.0", features = ["wgsl-in"] }
wgpu-types = "0.20.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
thiserror = "1.0"
case = "1.0"

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "1.4"
